# UntitledGameSystemManager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buildall.sh  ci.sh  copy-scripts.sh  ugm-cli-install.sh  ugm-cli-prepare-install.sh  uvproj.yaml
.github/: auto-issue-template.md
.github/workflows/: ci.yml  release.yml  update-deps.yaml
Common/Core/: Core.hpp
Common/Core/Core/: Defines.hpp  Utilities.cpp  Utilities.hpp
Common/GUI/: ImGuiUtils.cpp  ImGuiUtils.hpp  Window.cpp  Window.hpp
Common/Wheel/: Wheel.cpp  Wheel.hpp
Config/Core/: DefaultLayout.ini  Keybindings.yaml  Renderer.yaml  Window.yaml
Config/cmake/: UntitledGameSystemManager.cmake
IncusBindings/: bindings.go  go.mod  go.sum  libUGM_Incus_InternalFuncs.h
Installers/GUI/: CMakeLists.txt  GUI.cpp  GUI.hpp  glew  main.cpp
Installers/Scripts/: ugm-cli-install.sh  ugm-cli-prepare-install.sh  ugm-cli-update.sh
LXDBindings/: bindings.go  go.mod  go.sum  libUGM_LXD_InternalFuncs.h
Managers/CLI/: CMakeLists.txt  Commands.cpp  Commands.hpp  main.cpp
Managers/GUI/: CMakeLists.txt  Commands.cpp  Commands.hpp  GUI.cpp  GUI.hpp  glew  glfw  main.cpp  yaml-cpp
Source/: Instance.cpp  Instance.hpp  Mutex.hpp
Source/MainView/: MainBar.cpp  MainBar.hpp  MainView.cpp  MainView.hpp  SidePanel.cpp  SidePanel.hpp  Widgets.hpp
Source/Submenus/: Widgets.hpp
Source/Submenus/Edit/: Delete.cpp  Delete.hpp  Pin.cpp  Pin.hpp  Poweroff.cpp  Poweroff.hpp  Poweron.cpp  Poweron.hpp  Restart.cpp  Restart.hpp  ScriptGen.cpp  ScriptGen.hpp  Update.cpp  Update.hpp
Source/Submenus/File/: Exit.cpp  Exit.hpp  NewContainer.cpp  NewContainer.hpp  ShowDirectories.cpp  ShowDirectories.hpp
Source/Submenus/More/: About.cpp  About.hpp  Help.cpp  Help.hpp
Source/Submenus/Popups/: ConnectionPopup.cpp  ConnectionPopup.hpp  GenericErrorPopup.cpp  GenericErrorPopup.hpp
